# MewAMP

./: .gitignore  .version-lock  AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/rules/: comment-policy.mdc
.github/workflows/: build.yml
scripts/: generate-changelog.js  rename-app.js  update-tauri-pubkey.js  version-upgrade.js
src/: app.css  app.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: manifest.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/archive/: mod.rs
src-tauri/src/checksum/: mod.rs
src-tauri/src/commands/: diagnostics.rs  files.rs  git.rs  installer.rs  logs.rs  mod.rs  port_checker.rs  services.rs  settings.rs  splash.rs  sql_localdb.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/downloader/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/healthcheck/: mod.rs
src-tauri/src/installer/: config_gen.rs  database.rs  mod.rs  sql_localdb.rs
src-tauri/src/logs/: mod.rs
src-tauri/src/manifest/: resolver.rs  schema.rs
src-tauri/src/port_checker/: mod.rs
src-tauri/src/process_manager/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/windows/: installer-hooks.nsh  terminate-app-on-uninstall.wxs
src/components/: MutedCallout.tsx  PageHeader.tsx  PanelShell.tsx  SectionHeader.tsx  app-sidebar.tsx  error-boundary.tsx  footer.tsx  layout.tsx
src/hooks/: use-file-opener.ts
src/lib/: git-utils.ts  invoke-error.ts  tauri-commands.ts
src/pages/: dashboard.tsx  diagnostics.tsx  empty.tsx  logs.tsx  (+2 more)
(+85 files in other folders)
