[package]
name = "MewAMP"
version = "0.6.2"
description = "Local Apache, PHP, and MariaDB stack for desktop development with guided install and service management."
authors = ["mewisme"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mewamp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "devtools",
  "image-png",
  "tray-icon",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
zip = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
